fix centred call button and fix hover on mobile filter

--- a/estate-complexes-redesign/css/annonce-page-daily.scss
+++ b/estate-complexes-redesign/css/annonce-page-daily.scss
@@ -391,6 +391,11 @@
     margin-bottom: 20px;
     color: $color-dark;
   }
+  @media (max-width: 767px) {
+    .btn.btn-primary {
+      justify-content: center;
+    }
+  }
 }
 
 .bordered-row {
